@@ -1,5 +1,5 @@
 .\"
-.\" $Id: milter-greylist.8,v 1.36 2005/05/11 14:22:09 manu Exp $
+.\" $Id: milter-greylist.8,v 1.37 2005/06/05 21:59:02 manu Exp $
 .\"
 .\" Copyright (c) 2004 Emmanuel Dreyfus
 .\" All rights reserved.
@@ -35,11 +35,12 @@
 .SH SYNOPSIS
 .B milter-greylist 
 [\fB-A\fR]
-[\fB-a \fIdelay\fR]
+[\fB-a \fIautowhite_delay\fR]
 [\fB-c\fR]
 [\fB-D\fR]
 [\fB-d \fIdumpfile\fR]
 [\fB-f \fIconfigfile\fR]
+[\fB-h\fR]
 [\fB-l\fR]
 [\fB-q\fR]
 [\fB-r\fR]
@@ -47,7 +48,7 @@
 [\fB-T\fR]
 [\fB-u \fIusername\fR]
 [\fB-v\fR]
-[\fB-w \fIdelay\fR]
+[\fB-w \fIgreylist_delay\fR]
 [\fB-L \fIcidrmask\fR]
 [\fB-M \fIprefixlen\fR]
 [\fB-P \fIpidfile\fR]
@@ -118,11 +119,11 @@ Equivalent to the
 .I noauth
 option in the configuration file.
 .TP
-.B -a \fIdelay\fR
+.B -a \fIautowhite_delay\fR
 Configure auto-whitelisting. After a tuple (sender IP, sender e-mail, 
 recipient e-mail) has been accepted, other identical tuples will get
 accepted for 
-.I delay\fR.
+.I autowhite_delay\fR.
 The default is one day. Use zero to disable auto-whitelisting.
 A suffix can be added to specify seconds (s), minutes (m), hours (h), 
 days (d) or weeks (w). Without any suffix, values are treated as seconds.
@@ -154,6 +155,9 @@ option in the configuration file.
 .B -f \fIconfigfile\fR
 Location of the config file. Default is
 .I /etc/mail/greylist.conf\fR.
+.TP
+.B -h
+Show usage information.
 .TP
 .B -L \fIcidrmask\fR
 Use 
@@ -252,7 +256,7 @@ Equivalent to the
 .I verbose
 option in the configuration file.
 .TP
-.B -w \fIdelay\fR
+.B -w \fIgreylist_delay\fR
 sets the minimum delay between the first attempt and the time
 the message can be accepted. Default is 30 minutes. 
 A suffix can be added to specify seconds (s), minutes (m), hours (h), 
